testing/Travis/testcases/TypeChecker/shouldFail/IdentityTypeMismatch.adl
CONTEXT IdentityTypeMismatchCheck IN ENGLISH

PURPOSE CONTEXT IdentityTypeMismatchCheck
{+ This test must fail because the target of result[A*C] and the target of I[A] do not match. +}

RELATION result[A*C]

RULE testIdentityFail: result = I

ENDCONTEXT
